# CSSlib

./: .gitignore  LICENCE  README.md  ccslib.py  ccslib_example.ipynb  csslib.py  pyproject.toml  readme.md  requirements.txt  utils.py
data/WSe2/: WSe2.cif  config_WSe2.json
src/csslib/: __init__.py  config.py  config_logging.py  css.py  csslib.py  exceptions.py  logging_.py  utils.py
src/csslib/tools/: __init__.py  dataloader.py  filters.py  parser.py  transformations.py  visualization.py
src/csslib/tools/calculations/:  scheduler.py  __init__.py  calculator.py  cmd.py  inputs.py  parser.py  remote.py  scheduler.py  worker.py
src/csslib/tools/vasp/: __init__.py  calculator.py
src/csslib/tools/visualization/: __init__.py  dataloader.py  graphs.py
tests/: csslib_example.ipynb  wrong_config_test_1.json  wrong_config_test_2.json
tests/data/CsPbI3/: CsPbI3.cif  config_CsPbI3.json
tests/data/Tc/: Tc_cub.cif  config_TcC_cub.json
tests/data/VU9/: VU9.cif  config_VU9.json
tests/data/WSe2/: config_WSe2.json
