[project]
name = "csslib"
version = "1.2.3"
authors = [
  { name="A.V. Krautsou" },
  { name="A.A. Solovykh" },
]
readme = "README.md"
description = "CSSlib is an open-source code for building configuration search space (CSS) of disordered crystals, loading of the CSS dataset obtained, local/remote MPI or SLURM calculations and data visualization."
requires-python = ">=3.10, <3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "jupyter >=1.0.0, <= 1.1.1",
    "matplotlib >=3.10.7, <= 3.10.8",
    "numpy >=1.26.4, <= 2.4.2",
    "pandas >=2.3.2, < 3.0",
    "paramiko >= 4.0.0",
    "plotly >=6.3.1, <= 6.5.2",
    "pydantic >=2.12.5",
    "pymatgen ==2025.6.14",
    "pymatgen-analysis-defects ==2025.1.18",
    "scipy >=1.15.3, <1.17.1",
    "scp >= 0.15.0",
    "tqdm >=4.67.1, <= 4.67.3",
    "networkx >=3.4.2, <= 3.6.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
espresso = [
    "pymatgen-io-espresso @ git+https://github.com/Griffin-Group/pymatgen-io-espresso",
]
all = [
    {include-group = "espresso"},
]
